# talkplaydata-2

./: README.md  pyproject.toml
tp2dg/: call_gemini.py  conversation_orchestrator.py
tp2dg/components/: base.py  chat_session_manager.py  conversation_goal_llm.py  listener_llm.py  processors.py  profile_llm.py  recsys_llm.py  utils.py
tp2dg/data/: __init__.py  loader.py
tp2dg/data/dummy/: playlists.json  tracks.json  users.json
tp2dg/entities/: __init__.py  conversation_goal.py  conversation_goals.yaml  listener_profile.py  reponse_code.py  token_usage.py  track.py  turns.py
tp2dg/evaluation/: run_eval.py  summary.py
tp2dg/evaluation/prompts/: eval_template.py  utils.py
tp2dg/evaluation/prompts/conversation_element/: __init__.py  goal_progress_assessment.py  message.py  thought.py  track_id.py
tp2dg/evaluation/prompts/conversation_goal/: distribution.py  plausibility.py
tp2dg/evaluation/prompts/conversation_overall/: __init__.py  conversation_goal_alignment_distribution.py  goal_fulfillment.py  multimodality.py
tp2dg/evaluation/prompts/profile/: appropriateness.py  distribution.py
tp2dg/prompts/: prompt_template.py
tp2dg/prompts/conversation_goal/: query.py
tp2dg/prompts/listener_llm/: query.py  system.py
tp2dg/prompts/profile_llm/: query.py
tp2dg/prompts/recsys_llm/: query.py  system.py
